# storage/api-docs/api-docs.json
@@ -268,6 +268,108 @@
                 }
             }
         },
+        "/api/prestamos/{prestamo}": {
+            "get": {
+                "tags": [
+                    "préstamos"
+                ],
+                "summary": "Mostrar los préstamos de un usuario por su Id",
+                "operationId": "01ea39d455ac1665057b75bcc9744bdf",
+                "parameters": [
+                    {
+                        "name": "prestamo",
+                        "in": "path",
+                        "description": "id del usuario",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Se muestran los datos de los libros que tiene un usuario dada su id"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/api/usuarios/{usuario}/libros": {
+            "post": {
+                "tags": [
+                    "préstamos"
+                ],
+                "summary": "Crear un nuevo préstamo",
+                "operationId": "415c72cc0618ed3514f9b99a2b3df61c",
+                "parameters": [
+                    {
+                        "name": "libro_id",
+                        "in": "query",
+                        "description": "id del libro",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "usuario",
+                        "in": "path",
+                        "description": "usuario",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Dada la id de usuario pasada en la ruta y la id del libro por post, creamos un nuevo préstamo"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/api/usuarios/{usuario}/libros/{libros}": {
+            "delete": {
+                "tags": [
+                    "préstamos"
+                ],
+                "summary": "Eliminar un préstamo",
+                "operationId": "6104491cdf12833475cb1f8872581527",
+                "parameters": [
+                    {
+                        "name": "libros",
+                        "in": "path",
+                        "description": "id del libro",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "usuario",
+                        "in": "path",
+                        "description": "id del usuario",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Dada la id de usuario pasada en la ruta y la id del libro eliminamos un préstamo existente"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
         "/api/usuarios": {
             "get": {
                 "tags": [
